<resources>
    <string name="app_name">MasjidFinder</string>
    <string name="masjid_finder">Masjid Finder</string>
    <string name="login">Login</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="click_to_register">click to register</string>
    <string name="register">register</string>
    <string name="click_to_login">click to login</string>
    <string name="logout">logout</string>
    <string name="about_us">About Us</string>
    <string name="favorite_adzan">favorite adzan</string>
    <string name="mosque_nearby">mosque_nearby</string>
    <string name="home_page">Home page</string>
    <string name="list_of_adzan">List Of Adzan</string>
    <string name="azan_hijjaz">Azan Hijjaz</string>
    <string name="azan_madinah">Azan Madinah</string>
    <string name="pause_azan_hijaz">Pause Azan Hijaz</string>
    <string name="play_azan_hijaz">Play Azan Hijaz</string>
    <string name="pause_azan_madinah">Pause Azan Madinah</string>
    <string name="play_azan_madinah">Play Azan Madinah</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="find">Find</string>
    <string name="google_map_key">AIzaSyAH5-U8lISbq2s9kNhiD0M8wzgYs7pQkX8</string>
    <string name="maps_api_key">AIzaSyAH5-U8lISbq2s9kNhiD0M8wzgYs7pQkX8</string>
    <string name="search_nearby_places">Search nearby places</string>
    <string name="search_nearby_mosques">Search nearby mosques</string>
    <string name="search">Search</string>
    <string name="google_maps_key">AIzaSyAH5-U8lISbq2s9kNhiD0M8wzgYs7pQkX8</string>
    <string name="mission">Empowering Muslims to connect with their faith and community through a user-friendly mobile application.</string>
    <string name="title_mission">Mission</string>
    <string name="title_vission">Vission</string>
    <string name="vission">To be the leading mobile resource for Muslims worldwide, providing essential tools for prayer, knowledge, and community engagement.</string>
    <string name="team_members">Team Members</string>
    <string name="project_directors">Project Directors</string>
    <string name="no_id_ammar">(2023375171)</string>
    <string name="nama_ammar">WAN AMMAR HADI BIN WAN YUSNI</string>
    <string name="system_engineer">System Engineer</string>
    <string name="nama_syuk">AHMAD SYUKRI BIN SAZALI</string>
    <string name="ui_designer">Ui Designer</string>
    <string name="id_syukri">(2023375629)</string>
    <string name="nama_wan">AHMAD SAFWAN B. AHMAD SYUKRI@SENEK</string>
    <string name="id_wan">(2023368303)</string>
    <string name="todo">TODO</string>
    <string name="back">Back</string>
    <string name="masjid_nearby">Masjid Nearby</string>
    <string name="adzan_time">Adzan Time</string>
    <string name="azan_time">Azan Time</string>
    <string name="azan_subuh">Azan Subuh</string>
    <string name="adzan_isyak">Adzan Isyak</string>
    <string name="_20_43_am">20:43 PM</string>
    <string name="_19_28_pm">19:28 PM</string>
    <string name="adzan_maghrib">Adzan Maghrib</string>
    <string name="_16_45_am">16:45 AM</string>
    <string name="adzan_ashr">Adzan Ashr</string>
    <string name="_13_19_am">13:19 AM</string>
    <string name="adzan_zuhr">Adzan Zuhr</string>
    <string name="_5_56_am">5:56 AM</string>
    <string name="your_location">Your location</string>
</resources>