<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="#FFE6E6"
    tools:context=".AdzanReminder">

    <View
        android:id="@+id/top_view"
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="-18dp"
        android:background="@drawable/bg_view" />

    <TextView
        android:text="@string/adzan_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:textSize="35sp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        tools:ignore="RelativeOverlap" />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:rowCount="5"
        android:columnCount="1"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/top_view">

        <!-- Adzan Subuh Card -->
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="20dp"
            android:layout_margin="12dp"
            app:cardElevation="12dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/azan_subuh"
                    android:textStyle="bold"
                    android:textSize="25sp"
                    android:textColor="@color/purple"
                    android:layout_gravity="center_horizontal" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_5_56_am"
                    android:textStyle="italic"
                    android:textSize="23sp"
                    android:textColor="@color/purple"
                    android:layout_gravity="center_horizontal" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <!-- Adzan Zuhr Card -->
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="20dp"
            android:layout_margin="12dp"
            app:cardElevation="12dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/adzan_zuhr"
                    android:textStyle="bold"
                    android:textSize="25sp"
                    android:textColor="@color/purple"
                    android:layout_gravity="center_horizontal" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_13_19_am"
                    android:textStyle="italic"
                    android:textSize="23sp"
                    android:textColor="@color/purple"
                    android:layout_gravity="center_horizontal" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <!-- Adzan Ashr Card -->
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="20dp"
            android:layout_margin="12dp"
            app:cardElevation="12dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/adzan_ashr"
                    android:textStyle="bold"
                    android:textSize="25sp"
                    android:textColor="@color/purple"
                    android:layout_gravity="center_horizontal" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_16_45_am"
                    android:textStyle="italic"
                    android:textSize="23sp"
                    android:textColor="@color/purple"
                    android:layout_gravity="center_horizontal" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <!-- Adzan Maghrib Card -->
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="20dp"
            android:layout_margin="12dp"
            app:cardElevation="12dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/adzan_maghrib"
                    android:textStyle="bold"
                    android:textSize="25sp"
                    android:textColor="@color/purple"
                    android:layout_gravity="center_horizontal" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_19_28_pm"
                    android:textStyle="italic"
                    android:textSize="23sp"
                    android:textColor="@color/purple"
                    android:layout_gravity="center_horizontal" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <!-- Adzan Isyak Card -->
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="20dp"
            android:layout_margin="12dp"
            app:cardElevation="12dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/adzan_isyak"
                    android:textStyle="bold"
                    android:textSize="25sp"
                    android:textColor="@color/purple"
                    android:layout_gravity="center_horizontal" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_20_43_am"
                    android:textStyle="italic"
                    android:textSize="23sp"
                    android:textColor="@color/purple"
                    android:layout_gravity="center_horizontal" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </GridLayout>

    <ImageButton
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="20dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/back"
        android:src="@drawable/ic__back_arrow" />

</RelativeLayout>
