<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="#FFE6E6"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <View
        android:id="@+id/top_view"
        android:layout_width="match_parent"
        android:layout_height="210dp"
        android:background="@drawable/bg_view"
        />

    <TextView
        android:text="@string/about_us"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="35sp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        tools:ignore="RelativeOverlap" />


    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:rowCount="6"
        android:columnCount="1"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginTop="-70dp"
        android:layout_below="@+id/top_view">

        <androidx.cardview.widget.CardView
            android:layout_width="10dp"
            android:layout_height="17dp"
            android:layout_row="0"
            android:layout_rowWeight="1"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_margin="12dp"
            app:cardCornerRadius="40dp"
            app:cardElevation="12dp"

            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                tools:ignore="UseCompoundDrawables">

                <TextView
                    android:layout_width="wrap_content"
                    android:textStyle="bold"
                    android:fontFamily="sans-serif-medium"
                    android:textSize="20sp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:importantForAccessibility="no"
                    android:text="@string/title_mission"
                     />


                <TextView
                    android:id="@+id/pause_button1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:textStyle="italic"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:text="@string/mission"
                    android:textSize="13sp"
                    tools:ignore="SmallSp" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_height="10dp"
            android:layout_width="17dp"
            app:cardCornerRadius="40dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_row="1"
            android:layout_column="0"
            android:layout_margin="12dp"
            app:cardElevation="12dp"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center"
                tools:ignore="UseCompoundDrawables">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_vission"
                    android:textStyle="bold"
                    android:fontFamily="sans-serif-medium"
                    android:textSize="20sp"
                    android:layout_gravity="center_horizontal"
                    />


                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:textStyle="italic"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:textSize="13sp"
                    android:text="@string/vission"
                    tools:ignore="SmallSp" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/team_members"
            android:textStyle="bold"
            android:fontFamily="sans-serif-medium"
            android:textSize="28sp"
            android:layout_gravity="center_horizontal"
            />

        <androidx.cardview.widget.CardView
            android:layout_height="5dp"
            android:layout_width="5dp"
            app:cardCornerRadius="20dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_row="3"
            android:layout_column="0"
            android:layout_margin="12dp"
            app:cardElevation="12dp"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_row="2"
                android:layout_column="0"
                tools:ignore="UseCompoundDrawables">


                        <ImageView
                            android:layout_width="90dp"
                            android:layout_height="100dp"
                            android:layout_gravity="left"
                            android:contentDescription="@string/todo"
                            android:src="@drawable/ammar"

                            tools:ignore="RtlHardcoded" />
                        <TextView

                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textStyle="bold"
                            android:layout_marginStart="-10dp"
                            android:layout_marginRight="24sp"
                            android:textSize="20sp"
                            android:layout_marginBottom="20dp"
                            android:layout_marginTop="-80dp"
                            android:text="@string/project_directors"
                            tools:ignore="RtlHardcoded" />

                    <TextView

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="40dp"
                        android:layout_marginRight="24dp"
                        android:text="@string/nama_ammar"
                        android:textSize="13sp"
                        android:layout_marginBottom="-20dp"
                        android:layout_marginTop="-20dp"
                        tools:ignore="RtlHardcoded,SmallSp" />

                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="-24dp"
                    android:layout_marginRight="24dp"
                    android:text="@string/no_id_ammar"
                    android:textSize="13sp"
                    android:layout_marginTop="22dp"
                    android:layout_marginBottom="-80dp"
                    tools:ignore="RtlHardcoded,SmallSp" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_height="5dp"
            android:layout_width="5dp"
            app:cardCornerRadius="20dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_row="4"
            android:layout_column="0"
            android:layout_margin="12dp"
            app:cardElevation="12dp"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center"
                tools:ignore="UseCompoundDrawables">


                <ImageView
                    android:layout_width="90dp"
                    android:layout_height="80dp"
                    android:layout_marginTop="10dp"
                    android:layout_gravity="left"
                    android:contentDescription="@string/todo"
                    android:src="@drawable/syukri"

                    tools:ignore="RtlHardcoded" />
                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:textStyle="bold"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="24dp"
                    android:textSize="20sp"
                    android:layout_marginBottom="20dp"
                    android:layout_marginTop="-70dp"
                    android:text="@string/system_engineer"
                    tools:ignore="RtlHardcoded" />

                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="18dp"
                    android:layout_marginRight="24dp"
                    android:text="@string/nama_syuk"
                    android:textSize="13sp"
                    android:layout_marginTop="-23dp"
                    tools:ignore="RtlHardcoded,SmallSp" />

                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="-22dp"
                    android:layout_marginRight="24dp"
                    android:text="@string/id_syukri"
                    android:textSize="13sp"
                    android:layout_marginTop="3dp"
                    android:layout_marginBottom="-35dp"
                    tools:ignore="RtlHardcoded,SmallSp" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_height="5dp"
            android:layout_width="5dp"
            app:cardCornerRadius="20dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_row="5"
            android:layout_column="0"
            android:layout_margin="12dp"
            app:cardElevation="12dp"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center"
                tools:ignore="UseCompoundDrawables">


                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="70dp"
                    android:layout_marginTop="10dp"
                    android:layout_gravity="left"
                    android:contentDescription="@string/todo"
                    android:src="@drawable/safwan"

                    tools:ignore="RtlHardcoded" />
                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:textStyle="bold"
                    android:layout_marginLeft="-10dp"
                    android:layout_marginRight="24dp"
                    android:textSize="20sp"
                    android:layout_marginBottom="20dp"
                    android:layout_marginTop="-65dp"
                    android:text="@string/ui_designer"
                    tools:ignore="RtlHardcoded" />

                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="62dp"
                    android:layout_marginRight="24dp"
                    android:text="@string/nama_wan"
                    android:textSize="12sp"
                    android:layout_marginTop="-20dp"
                    tools:ignore="RtlHardcoded,SmallSp" />

                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="-22dp"
                    android:layout_marginRight="24dp"
                    android:text="@string/id_wan"
                    android:textSize="13sp"
                    android:layout_marginTop="1dp"
                    android:layout_marginBottom="-15dp"
                    tools:ignore="RtlHardcoded,SmallSp" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </GridLayout>

    <ImageButton
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="20dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/back"
        android:src="@drawable/ic__back_arrow" />


</RelativeLayout>