<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="#FFE6E6"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <View
        android:id="@+id/top_view"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@drawable/bg_view"
        />

    <TextView
        android:text="@string/list_of_adzan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="35sp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"/>


    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:rowCount="2"
        android:columnCount="1"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/top_view">

        <androidx.cardview.widget.CardView
            android:layout_height="40dp"
            android:layout_width="40dp"
            app:cardCornerRadius="20dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_margin="12dp"
            app:cardElevation="12dp"

            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:importantForAccessibility="no"
                    android:src="@drawable/baseline_mosque_24"
                    android:layout_gravity="center_horizontal"
                    />



                <Button
                    android:id="@+id/play_button1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/play_azan_hijaz"
                    android:layout_gravity="center_horizontal"
                    android:textSize="15sp"
                    android:backgroundTint="@color/purple"
                    />

                <Button
                    android:id="@+id/pause_button1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pause_azan_hijaz"
                    android:layout_gravity="center_horizontal"
                    android:textSize="15sp"
                    android:backgroundTint="@color/purple"
                    />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_height="40dp"
            android:layout_width="40dp"
            app:cardCornerRadius="15dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_row="1"
            android:layout_column="0"
            android:layout_margin="12dp"
            app:cardElevation="12dp"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:importantForAccessibility="no"
                    android:src="@drawable/baseline_wb_cloudy_24"
                    android:layout_gravity="center_horizontal"
                    />



                <Button
                    android:id="@+id/play_button2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/play_azan_madinah"
                    android:layout_gravity="center_horizontal"
                    android:textSize="15sp"
                    android:backgroundTint="@color/purple"
                    />

                <Button
                    android:id="@+id/pause_button2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pause_azan_madinah"
                    android:layout_gravity="center_horizontal"
                    android:textSize="15sp"
                    android:backgroundTint="@color/purple"
                    />

            </LinearLayout>
        </androidx.cardview.widget.CardView>


    </GridLayout>

    <ImageButton
        android:id="@+id/back_adzan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="40dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/back"
        android:src="@drawable/ic__back_arrow" />


</RelativeLayout>